<resources>
    <string name="app_name">Capacitacion Horizonte Clase 2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Configuracion</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="user_summary">Usuario valido para el Ingreso de la aplicacion</string>
    <string name="listTitle">Lista</string>
    <string name="listSummary">Lista referencias</string>
    <string name="dialogTitle">Seleccione un valor</string>
    <string name="flight_sort_option_default_value">0</string>
    <string name="pref_user_name_title">Nombre de Usuario</string>
    <string name="ref_user_name_summary">Usuario de Sistema</string>
    <string name="pref_alert_email_title">Envio de Email?</string>
    <string name="ref_alert_email_adress_title">Email de Envio</string>
    <string name="pref_list_multi">Lista Multiple</string>
    <string name="pref_general_title">Configuracion de la Aplicacion</string>
    <string name="user_name_key">user_name</string>
    <string name="lista_opcion_key">lista_opcion</string>
    <string name="lista_opcion_multiple_key">lista_opcion_multiple</string>
    <string name="alert_email_address_key">alert_email_address</string>
    <string name="notification_key">alert_noti</string>
    <string name="notification_time_key">alert_noti_time</string>
    <string name="notification">Mostrar Notificaciones </string>

    <string-array name="list_option_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="list_option">
        <item>Primera Opcion</item>
        <item>Segunda Opcion</item>
        <item>Tercera Opcion</item>
    </string-array>


    <string-array name="default_list_option">
        <item>0</item>
    </string-array>
    <string name="title_activity_maps">Mapa</string>
    <string name="action_map">Mapa</string>
    <string name="action_start_stope">Iniciar/Parar Servicio</string>
    <string name="service_content_txt">Tiempo de Intervalo: %s</string>

    <string name="pref_map_title">Mapa</string>

    <string name="pref_map_distance_title">Distancia</string>
    <string name="ref_map_distance_summary">Distancia en Metros</string>

    <string name="pref_map_time_interval_title">Tiempo</string>
    <string name="ref_map_time_interval_summary">Tiempo en Segundos</string>

    <string name="map_distance">map_distance</string>
    <string name="map_time_interval">map_time_interval</string>

    <string name="ref_user_name_default">Texto default</string>
    <string name="dismiss">dismiss</string>
    <string name="snooze">snooze</string>
    <string name="search_title">Buscar</string>
</resources>
