<?xml version="1.0" encoding="utf-8"?><!-- This file is /res/xml/main.xml -->
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_general_title">


        <android.support.v7.preference.EditTextPreference
            android:id="@+id/user_name"
            android:key="user_name"
            android:summary="@string/ref_user_name_summary"
            android:title="@string/pref_user_name_title" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="alert_noti"
            android:summaryOff="Notificaciones Desactivadas"
            android:summaryOn="Notificaciones Actividas"
            android:title="@string/notification" />

        <android.support.v7.preference.EditTextPreference
            android:dependency="alert_noti"
            android:inputType="textEmailAddress"
            android:key="alert_noti_time"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="Tiempo de notificacion" />

        <android.support.v7.preference.ListPreference
            android:defaultValue="@string/flight_sort_option_default_value"
            android:dialogTitle="@string/dialogTitle"
            android:entries="@array/list_option"
            android:entryValues="@array/list_option_values"
            android:key="lista_opcion"
            android:summary="@string/listSummary"
            android:title="@string/listTitle" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>