<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.edu.unrn.lia.capacitacionhorizonte2.gps.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="110"
        android:title="@string/action_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_stope"
        android:orderInCategory="120"
        android:title="@string/action_start_stope"
        app:showAsAction="never" />

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/places_ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />
</menu>
