<?xml version="1.0" encoding="utf-8"?>
<!-- This file is /res/xml/main.xml -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

		<PreferenceCategory
			android:title="Alerts"
			android:icon="@drawable/ic_notifications_black_24dp">

			<ListPreference
				android:key="flight_sort_option"
				android:title="@string/listTitle"
				android:summary="@string/listSummary"
				android:entries="@array/flight_sort_options"
				android:entryValues="@array/flight_sort_options_values"
				android:dialogTitle="@string/dialogTitle"
				android:defaultValue="@string/flight_sort_option_default_value" />


			<MultiSelectListPreference
				android:key="pizza_toppings"
				android:title="Favorite Pizza Toppings"
				android:entries="@array/pizza_toppings"
				android:entryValues="@array/pizza_toppings_values"
				android:dialogTitle="Choose your favorites"
				android:defaultValue="@array/default_pizza_toppings"
				/>

			<CheckBoxPreference
				android:key="alert_email"
				android:title="Send email?" />
			<EditTextPreference
				android:key="alert_email_address"
				android:layout="?android:attr/preferenceLayoutChild"
				android:title="Email Address"
				android:dependency="alert_email" />
		</PreferenceCategory>

</PreferenceScreen>